2024-06-24  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.5.

2024-06-23  Robby Stephenson  <robby@periapsis.org>

	* Implemented overrides for SRU query indices (Bug 488931).

2024-06-21  Robby Stephenson  <robby@periapsis.org>

	* Removed percent encoding for XSLT file reading (Bug 488707).

2024-05-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with showing entries with long content (Bug 487079).

2024-03-23  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.4.

2024-03-17  Robby Stephenson  <robby@periapsis.org>

	* Updated Choice fields to allow multiple values (Bug 483831).

2024-03-16  Robby Stephenson  <robby@periapsis.org>

	* Updated FilmAffinity data source.

2024-03-15  Robby Stephenson  <robby@periapsis.org>

	* Added reader for importing book and video collections from file metadata (Bug 214606).

2024-03-09  Robby Stephenson  <robby@periapsis.org>

	* Enabled building with Qt6/KF6.
	* Fixed DVDFr searches with title accents.

2024-02-11  Robby Stephenson  <robby@periapsis.org>

	* Removed data source for Allocine.

2024-01-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug for entry selection after changing group field (Bug 480297).

2024-01-15  Robby Stephenson  <robby@periapsis.org>

	* Fixed display bug with entry status (Bug 479843).

2024-01-13  Robby Stephenson  <robby@periapsis.org>

	* Updated Open Library source to search for comics (Bug 479506).
	* Fixed bug with filter dialog buttons (Bug 479771).
	* Updated iTunes, Discogs, and MusicBrainz to separate multi-disc tracks (Bug 479503).

2024-01-09  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with opening help from the config dialog (Bug 479591).

2024-01-02  Robby Stephenson  <robby@periapsis.org>

	* Removed AnimeNFO.com data source, website is defunct.

2024-01-01  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.5.3.
	* Updated author search for Open Library.
	* Improved entry matching heuristics.
